# rpg

./: CMakeLists.txt  a.out  main.c  map.c  read.c  vgcore.131032  vgcore.131122  vgcore.131321  vgcore.131831  yaml.c
assets/map/: scene1.yaml
components/: component.c  component.h
controller/init/: bt.h  bt.ino  button.ino  crc.cpp  gyro.ino  init.ino  joystick.ino
include/: map.h  read.h  window.h  yaml.h
map/: ground.c  ground.h  player.c  player.h  player_other.c  player_other.h  wall.c  wall.h
network/: create_map.c  create_payload.c  md5.c  network_tools.c  payload.h  player.c  player.h  tcp_client.c  tools.c  tools.h
network/actions/: all_action.h  move_player.c
network/client/: bluetooth.c  bluetooth.h  client.h  combat.c  combat.h  handle_responce.c  init_players.c  player.h  point.h  request.c  square.c  udp_client.c
network/client.c/: udp_client.c
network/protocol/: IResponse.h  actions.c  actions.h  broadcast.c  broadcast.h  id.c  id.h  request_id.c  types.h
network/server/: new_connection.c  server.c  server.h  update.c
